# yar

./: .gitignore  .golangci.yaml  .goreleaser.yml  AGENTS.md  Cargo.toml  LICENSE  LLM.txt  README.md  go.mod
.github/workflows/: ci.yml  release.yml
cmd/yar/: main.go
crates/yar-cli/: Cargo.toml
crates/yar-cli/src/: invocation.rs  main.rs  metadata_transaction.rs  project.rs  runtime_bundle.rs
crates/yar-cli/tests/: cli.rs
crates/yar-compiler/: Cargo.toml
crates/yar-process-control/: Cargo.toml
crates/yar-process-control/src/: lib.rs
crates/yar-runtime/: Cargo.toml  build.rs
docs/: YAR.md
docs/context/: context-map.md  practices.md  summary.md  terminology.md
docs/language/: README.md  decisions.md  process.md  proposal-template.md  roadmap.md  the-yar-code.md  vision.md
examples/http_server/: main.yar
internal/ast/: ast.go  packages.go
internal/checker/: checker.go  checker_test.go
internal/codegen/: llvm.go  llvm_test.go
internal/compiler/: cc.go  compiler.go  compiler_test.go  generics.go  packages.go  target.go  target_test.go  test.go  test_test.go
internal/diag/: diag.go
internal/lexer/: lexer.go
internal/parser/: parser.go  parser_test.go
internal/runtime/: runtime.go  runtime_source.txt  runtime_test.go
internal/stdlib/: stdlib.go  stdlib_test.go
scripts/: build-release-runtime.sh  verify-release-bundles.sh  verify-rust-testdata-run.sh  verify-rust-testdata.sh  verify-windows-concurrency.ps1  zig-cc.sh
testdata/: add.yar  bool_operators.yar  divide.yar  i64.yar  panic.yar  try.yar  unhandled_error.yar
(+147 files in other folders)
