[package]
name = "yar-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "yar"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
yar-compiler = { path = "../yar-compiler" }
yar-process-control = { path = "../yar-process-control" }
