[package]
name = "yar-process-control"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
process-wrap = { version = "9.1.0", default-features = false, features = ["std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"
signal-hook = "0.4.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Diagnostics_ToolHelp", "Win32_System_JobObjects", "Win32_System_Threading"] }
